# nlmeas

./: nlmeans.md
dct/: aan.cc  basis.py  coeffs.py  constants.cc  dct8.c  dct_a.cc  dct_b.cc  dct_c.cc  listing1.c  listing2.c  listing3.c  llm_dct.cc  llm_mit.cc  ortho.py  rot.cc
intimagebm_1/: CMakeLists.txt  README.md  blockmatch.c  blockmatch.h  blockmatch_2d.c  blockmatch_dists.h  blockmatch_stereo.c  fimage2.c  fimage2.h  integralImage4.c  main_blockmatch.c  main_stereo.c  shear.c  shear.h  smartparameter.h  utils.inc.c
intimagebm_1/iio/: CMakeLists.txt  iio.c
llcc/: README.txt  cscope.out  llcc  llcc.cpp  makefile
nlmeansC/: img_diff_ipol  img_mse_ipol  libauxiliar.cpp  libauxiliar.h  libdenoising.cpp  libdenoising.h  nlmeans_ipol  nlmeans_ipol.cpp
nlmp_1.2/: BSD.txt  Makefile  README.txt
nlmp_1.2/src/: NLMeansP.c  addgaussnoise.c  img_mse_ipol.c  io_png.c  libauxiliary.c  libauxiliary.h  nlmp.c
